<resources>
    <string name="app_name">GYM APP</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="enquiry">Enquiry</string>
    <string name="hours_of_sleep">Hours of sleep</string>
    <string name="hours_of_deep_sleep">Hours of Deep Sleep</string>
    <string name="snoring">Snoring</string>
    <string name="radio_yes">Yes</string>
    <string name="radio_no">No</string>
    <string name="textTabTitle1">Tab1</string>
    <string name="textTabTitle2">Tab2</string>
    <string name="textTabTitle3">Tab3</string>
    <string name="enter_r_no">Enter R.No</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="enter_recepie_name">Enter Recepie Name</string>
    <string name="enter_facebook_link">Enter Facebook Link</string>
    <string name="enter_amount_of_carbohydrates">Enter Amount of Carbohydrates</string>
    <string name="enter_amount_of_proteins">Enter Amount of Proteins</string>
    <string name="enter_amount_of_fats">Enter Amount of Fats</string>
    <string name="water">Water</string>
    <string name="litres_per_day">Litres per day</string>
    <string name="before_bed">Before bed</string>
    <string name="on_rising">On Rising</string>
    <string name="txtFirstLayout">First</string>
    <string name="txtLastLayout">Last</string>
    <string name="txtMiddleLayout">Middle</string>
    <string name="txtName">Name</string>
    <string name="txtNumberLayout">Contact number</string>
    <string name="txtAgeLayout">Age</string>
    <string name="txtGenderLayout">Gender</string>
    <string name="txtEmailLayout">Email id</string>
    <string name="txtOccupation"><![CDATA[Occupation&(Desk,Field,Shop,Sites,Home)]]></string>
    <string name="txtOcupationLayout">Occupation</string>
    <string name="txtPRMC">Physically Restrictive Medical Condition</string>
    <string name="txtPRMC1Layout">Diabetes/Stomoch/Kidney</string>
    <string name="txtPRMC2Layout">Joints/Bone/Harmonal/Accidents/Allergies</string>
    <string name="txtPRMC3Layout">How do you know \'Oh!!\'</string>
    <string name="txtTTJoinLayout">Trigger to join/Health goal</string>
    <string name="btnEnquiry">Continuous</string>
    <string name="txtRest">Rest</string>
    <string name="txtHome">Home</string>
    <string name="txtAway">Away</string>
    <string name="txtRP">R.P.</string>
    <string name="txtSleep">Sleep</string>
    <string name="txtSnoring">Snoring</string>
    <string name="txtOverload">Overload</string>
    <string name="txtOccupationEnquiry">Occu. Time</string>
    <string name="txtToTime">To</string>
    <string name="txtToTimeExample1">ex:- 9:30 am</string>
    <string name="txtToTimeExample2">ex:- 6:30 pm</string>
    <string name="txtIntake">Intake</string>
    <string name="txtVegetarian">Vegetarian</string>
    <string name="txtNonVegetarian">Non-Vegetarian</string>
    <string name="txtMeal">Meal Int</string>
    <string name="txtParties_Function">Parties/Function</string>
    <string name="txtNewRecipes">Open new recipes ?</string>
    <string name="txtRadioRecipesYes">Y</string>
    <string name="txtRadioRecipesNo">N</string>
    <string name="txtRecipesCompulsory">C</string>
    <string name="txtHeight">Height</string>
    <string name="txtWeight">Weight</string>
    <string name="txtBMI">BMI</string>
    <string name="txtDiff">Diff</string>
    <string name="txtTarget">Target</string>
    <string name="txtFat">Fat</string>
    <string name="txtInchLoss">Inch Loss</string>
    <string name="txtMuscleGain">Muscle Gain</string>
    <string name="txtRecommended">Recommended \nMembership For</string>
</resources>
