<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ebc003.gymapp.ActivityEnquiry">
    <com.example.ebc003.gymapp.CustomComponents.MyCustomTextViewStyleOne
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtName"
        android:textSize="15sp"
        android:textStyle="bold|italic"/>
    <LinearLayout
        android:id="@+id/linerName"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtFirstNamelayout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <EditText
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtFirstLayout"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtLastNamelayout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <EditText
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtLastLayout"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtMiddleNamelayout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <EditText
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtMiddleLayout"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtNumberlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtNumberLayout"/>
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtAgeLayout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <EditText
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtAgeLayout"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtGenderLayout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <EditText
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtGenderLayout"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtEmailLayout"/>
    </android.support.design.widget.TextInputLayout>
    <com.example.ebc003.gymapp.CustomComponents.MyCustomTextViewStyleOne
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtOccupation"
        android:textSize="15sp"
        android:textStyle="bold|italic"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtOccupationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtOcupationLayout"/>
    </android.support.design.widget.TextInputLayout>
    <com.example.ebc003.gymapp.CustomComponents.MyCustomTextViewStyleOne
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtPRMC"
        android:textSize="15sp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold|italic"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtPRMC1Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtPRMC1Layout"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtPRMC2Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtPRMC2Layout"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtPRMC3Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtPRMC3Layout"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtTTJoinLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtTTJoinLayout"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:text="@string/btnEnquiry"
        android:layout_marginTop="10dp"
        android:backgroundTintMode="add"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:onClick="onClickEnqFormTwo"/>
</LinearLayout>
</ScrollView>