<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="50dp">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/text_reg_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_r_no"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/text_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_quantity"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/text_recepieName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_recepie_name"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/text_facebook_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_facebook_link"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/text_carbohydrates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_amount_of_carbohydrates"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/text_proteins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_amount_of_proteins"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/text_fats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_amount_of_fats"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/text_fats1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_amount_of_fats"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Habits"
            android:textSize="20sp"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/text_onRising"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/on_rising"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/text_bed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/before_bed"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/water"
            android:textSize="20sp"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/text_amount_of_water"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/litres_per_day"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/text_frequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Frequency of water"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="Submit"/>

    </LinearLayout>
</ScrollView>