<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginBottom="20dp">
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ebc003.gymapp.ActivityEnquiryFormThree">

    <com.example.ebc003.gymapp.CustomComponents.MyCustomTextViewStyleTwo
        android:id="@+id/txtIntake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/textview_enquiry"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:text="@string/txtIntake"
        android:textStyle="bold"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginLeft="12dp"
        android:elevation="8dp"
        android:layout_marginTop="12dp"/>

    <!--<ImageView-->
    <!--android:layout_width="20dp"-->
    <!--android:layout_height="20dp"-->
    <!--android:src="@drawable/broccoli"-->
    <!--android:layout_marginRight="10dp"-->
    <!--android:layout_alignBottom="@+id/txtVegetarian"-->
    <!--android:layout_toLeftOf="@+id/txtVegetarian"-->
    <!--android:layout_toStartOf="@+id/txtVegetarian"/>-->

    <com.example.ebc003.gymapp.CustomComponents.MyCustomCheckbox
        android:id="@+id/checkboxVegetarian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:checked="true"
        android:text="@string/txtVegetarian"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/txtIntake"
        android:layout_alignLeft="@+id/txtIntake"
        android:layout_toRightOf="@+id/txtIntake"/>

    <com.example.ebc003.gymapp.CustomComponents.MyCustomCheckbox
        android:id="@+id/checkboxNonVegetarian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/txtNonVegetarian"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/checkboxVegetarian"
        android:layout_alignLeft="@+id/checkboxVegetarian"
        android:layout_alignStart="@+id/checkboxVegetarian"/>

    <com.example.ebc003.gymapp.CustomComponents.MyCustomTextViewStyleTwo
        android:id="@+id/txtMeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/txtMeal"
        android:paddingTop="20dp"
        android:layout_below="@+id/checkboxNonVegetarian"
        android:layout_alignLeft="@+id/checkboxVegetarian"
        android:layout_alignStart="@+id/checkboxVegetarian"
        android:layout_marginTop="10dp"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/editMeal"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_background"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_alignBottom="@+id/txtMeal"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <com.example.ebc003.gymapp.CustomComponents.MyCustomTextViewStyleTwo
        android:id="@+id/txtParties_Function"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/txtParties_Function"
        android:paddingTop="20dp"
        android:layout_below="@+id/txtMeal"
        android:layout_alignLeft="@+id/txtMeal"
        android:layout_alignStart="@+id/txtMeal"
        android:layout_marginTop="10dp"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/editParties_Function"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_background"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_alignBottom="@+id/txtParties_Function"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <com.example.ebc003.gymapp.CustomComponents.MyCustomTextViewStyleTwo
        android:id="@+id/txtNewRecipes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/txtNewRecipes"
        android:paddingTop="20dp"
        android:layout_below="@+id/txtParties_Function"
        android:layout_alignLeft="@+id/txtParties_Function"
        android:layout_alignStart="@+id/txtParties_Function"
        android:layout_marginTop="10dp"/>

    <android.support.v7.widget.AppCompatRadioButton
        android:id="@+id/radioRecipesCompulsory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtRecipesCompulsory"
        android:layout_marginRight="5dp"
        android:layout_alignBottom="@+id/txtNewRecipes"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <android.support.v7.widget.AppCompatRadioButton
        android:id="@+id/radioRecipesYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtRadioRecipesYes"
        android:layout_alignBottom="@+id/txtNewRecipes"
        android:layout_alignLeft="@+id/editParties_Function"
        android:layout_alignStart="@+id/editParties_Function" />

    <android.support.v7.widget.AppCompatRadioButton
        android:id="@+id/radioRecipesNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtRadioRecipesNo"
        android:layout_marginLeft="10dp"
        android:layout_alignBottom="@+id/radioRecipesYes"
        android:layout_toRightOf="@+id/radioRecipesYes"
        android:layout_toEndOf="@+id/radioRecipesYes" />

    <com.example.ebc003.gymapp.CustomComponents.MyCustomTextViewStyleTwo
        android:id="@+id/txtHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/txtHeight"
        android:paddingTop="20dp"
        android:layout_below="@+id/txtNewRecipes"
        android:layout_alignLeft="@+id/txtNewRecipes"
        android:layout_alignStart="@+id/txtNewRecipes"
        android:layout_marginTop="10dp"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/editHeight"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_background"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="10dp"
        android:layout_alignBottom="@+id/txtHeight"
        android:layout_toEndOf="@+id/txtHeight"
        android:layout_toRightOf="@+id/txtHeight" />

    <com.example.ebc003.gymapp.CustomComponents.MyCustomTextViewStyleTwo
        android:id="@+id/txtWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/txtWeight"
        android:paddingTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_alignBottom="@+id/txtHeight"
        android:layout_toEndOf="@+id/editHeight"
        android:layout_toRightOf="@+id/editHeight"
        android:layout_marginTop="10dp"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/editWeight"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_background"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_alignBottom="@+id/txtWeight"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"/>

    <com.example.ebc003.gymapp.CustomComponents.MyCustomTextViewStyleTwo
        android:id="@+id/txtBMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/txtBMI"
        android:paddingTop="20dp"
        android:layout_below="@+id/txtHeight"
        android:layout_alignLeft="@+id/txtHeight"
        android:layout_alignStart="@+id/txtHeight"
        android:layout_marginTop="10dp"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/editBMI"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_background"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="10dp"
        android:layout_alignBottom="@+id/txtBMI"
        android:layout_toEndOf="@+id/txtHeight"
        android:layout_toRightOf="@+id/txtHeight" />

    <com.example.ebc003.gymapp.CustomComponents.MyCustomTextViewStyleTwo
        android:id="@+id/txtDiff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/txtDiff"
        android:paddingTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_alignBottom="@+id/txtBMI"
        android:layout_toEndOf="@+id/editBMI"
        android:layout_toRightOf="@+id/editBMI"
        android:layout_marginTop="10dp"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/editDiff"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_background"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_alignBottom="@+id/txtBMI"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"/>

    <View
        android:id="@+id/divider"
        style="@style/Divider"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/txtBMI"
        android:background="@color/colorBlackLess"/>

    <com.example.ebc003.gymapp.CustomComponents.MyCustomTextViewStyleTwo
        android:id="@+id/txtTarget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/txtTarget"
        android:paddingTop="10dp"
        android:layout_below="@+id/divider"
        android:layout_alignLeft="@+id/txtBMI"
        android:layout_alignStart="@+id/txtBMI"
        android:layout_marginTop="10dp"/>

    <com.example.ebc003.gymapp.CustomComponents.MyCustomCheckbox
        android:id="@+id/checkboxFat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:checked="true"
        android:text="@string/txtFat"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/txtTarget"
        android:layout_alignLeft="@+id/txtTarget"
        android:layout_toRightOf="@+id/txtTarget"/>

    <com.example.ebc003.gymapp.CustomComponents.MyCustomCheckbox
        android:id="@+id/checkboxInchLoss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/txtInchLoss"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/checkboxFat"
        android:layout_alignLeft="@+id/checkboxFat"
        android:layout_alignStart="@+id/checkboxFat"/>

    <com.example.ebc003.gymapp.CustomComponents.MyCustomTextViewStyleTwo
        android:id="@+id/txtMuscleGain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/txtMuscleGain"
        android:paddingTop="20dp"
        android:layout_below="@+id/checkboxInchLoss"
        android:layout_alignLeft="@+id/checkboxInchLoss"
        android:layout_alignStart="@+id/checkboxInchLoss"
        android:layout_marginTop="10dp"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/editMuscleGain"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_background"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_alignBottom="@+id/txtMuscleGain"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <com.example.ebc003.gymapp.CustomComponents.MyCustomTextViewStyleTwo
        android:id="@+id/txtRecommended"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/txtRecommended"
        android:paddingTop="10dp"
        android:layout_below="@+id/txtMuscleGain"
        android:layout_alignLeft="@+id/txtMuscleGain"
        android:layout_alignStart="@+id/txtMuscleGain"
        android:layout_marginTop="10dp"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/editRecommended"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_background"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_alignBottom="@+id/txtRecommended"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
</ScrollView>